# zephyrSynth

./: Makefile
effectHardware/: codec.kicad_sch  display.kicad_sch  effect.kicad_prl  effect.kicad_pro  effect.kicad_sch  effect.kicad_sch-bak  effect_pwr.kicad_sch  effect_pwr.kicad_sch-bak  f411re.kicad_sch  f411re.kicad_sch-bak  fp-info-cache  inputs.kicad_sch  inputs.kicad_sch-bak
gdb/: flash
zephyrSynth-skeleton/: CMakeLists.txt  Makefile  nrf52840dk  nucleo_f411re.overlay  prj.conf
zephyrSynth-skeleton/boards/: nucleo_f411.overlay
zephyrSynth-skeleton/src/: main.c
zephyrSynth-skeleton/zephyr/: module.yml
